[gd_scene load_steps=56 format=3 uid="uid://bttdqg7qlh5ox"]

[ext_resource type="Script" path="res://Arte/Entidades/Inimigos/Morcego/enemyCollision.gd" id="1_7f5tj"]
[ext_resource type="Script" path="res://Scripts/Entidades/Inimigos/Morcego Scripts/morcego2.gd" id="1_760se"]
[ext_resource type="Texture2D" uid="uid://chryvplp3237" path="res://Arte/Entidades/Inimigos/Morcego/AseImporter/Morcego.png" id="2_e8ub7"]
[ext_resource type="AudioStream" uid="uid://byujg45404ppg" path="res://Sons/interface2.wav" id="3_hdrev"]
[ext_resource type="AudioStream" uid="uid://bahrxtwfkog2t" path="res://Sons/bite.wav" id="4_p530u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3g1w"]
size = Vector2(22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6826d"]
atlas = ExtResource("2_e8ub7")
region = Rect2(78, 0, 26, 17)
margin = Rect2(3, 4, 6, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1jvv"]
atlas = ExtResource("2_e8ub7")
region = Rect2(30, 19, 22, 19)
margin = Rect2(5, 3, 10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6ikx"]
atlas = ExtResource("2_e8ub7")
region = Rect2(104, 0, 22, 20)
margin = Rect2(5, 5, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_se77a"]
atlas = ExtResource("2_e8ub7")
region = Rect2(52, 17, 22, 20)
margin = Rect2(5, 5, 10, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yqp8"]
atlas = ExtResource("2_e8ub7")
region = Rect2(26, 38, 26, 14)
margin = Rect2(3, 14, 6, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_alarr"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 33, 26, 16)
margin = Rect2(3, 11, 6, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1k0n"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 73, 30, 7)
margin = Rect2(1, 9, 2, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqm84"]
atlas = ExtResource("2_e8ub7")
region = Rect2(82, 47, 30, 12)
margin = Rect2(1, 5, 2, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyepl"]
atlas = ExtResource("2_e8ub7")
region = Rect2(102, 77, 14, 14)
margin = Rect2(12, 5, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlcqj"]
atlas = ExtResource("2_e8ub7")
region = Rect2(14, 93, 16, 10)
margin = Rect2(12, 10, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ascym"]
atlas = ExtResource("2_e8ub7")
region = Rect2(60, 77, 14, 15)
margin = Rect2(11, 7, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_0legr"]
atlas = ExtResource("2_e8ub7")
region = Rect2(104, 20, 16, 10)
margin = Rect2(6, 8, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvhgu"]
atlas = ExtResource("2_e8ub7")
region = Rect2(30, 79, 14, 14)
margin = Rect2(5, 6, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8hqu"]
atlas = ExtResource("2_e8ub7")
region = Rect2(88, 77, 14, 14)
margin = Rect2(6, 5, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wokt"]
atlas = ExtResource("2_e8ub7")
region = Rect2(72, 92, 16, 10)
margin = Rect2(4, 10, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdfdq"]
atlas = ExtResource("2_e8ub7")
region = Rect2(112, 47, 14, 15)
margin = Rect2(7, 7, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jlcl"]
atlas = ExtResource("2_e8ub7")
region = Rect2(52, 37, 16, 10)
margin = Rect2(10, 8, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_0elkh"]
atlas = ExtResource("2_e8ub7")
region = Rect2(44, 79, 14, 14)
margin = Rect2(13, 6, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji6n7"]
atlas = ExtResource("2_e8ub7")
region = Rect2(30, 70, 30, 9)
margin = Rect2(1, 9, 2, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcm74"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 19, 30, 14)
margin = Rect2(1, 9, 2, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_naltd"]
atlas = ExtResource("2_e8ub7")
region = Rect2(26, 0, 26, 19)
margin = Rect2(3, 1, 6, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8c5e"]
atlas = ExtResource("2_e8ub7")
region = Rect2(74, 59, 26, 11)
margin = Rect2(3, 4, 6, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_50837"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 49, 22, 15)
margin = Rect2(5, 6, 10, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_4brdf"]
atlas = ExtResource("2_e8ub7")
region = Rect2(74, 77, 14, 15)
margin = Rect2(9, 7, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjoof"]
atlas = ExtResource("2_e8ub7")
region = Rect2(116, 77, 10, 10)
margin = Rect2(11, 15, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_por74"]
atlas = ExtResource("2_e8ub7")
region = Rect2(120, 20, 6, 9)
margin = Rect2(13, 17, 26, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_61euk"]
atlas = ExtResource("2_e8ub7")
region = Rect2(60, 70, 30, 7)
margin = Rect2(1, 9, 2, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcrsi"]
atlas = ExtResource("2_e8ub7")
region = Rect2(52, 47, 30, 12)
margin = Rect2(1, 5, 2, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqi5v"]
atlas = ExtResource("2_e8ub7")
region = Rect2(52, 0, 26, 17)
margin = Rect2(3, 2, 6, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8gm7"]
atlas = ExtResource("2_e8ub7")
region = Rect2(22, 52, 26, 11)
margin = Rect2(3, 7, 6, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2o5g"]
atlas = ExtResource("2_e8ub7")
region = Rect2(100, 31, 26, 16)
margin = Rect2(3, 8, 6, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rusd"]
atlas = ExtResource("2_e8ub7")
region = Rect2(74, 31, 26, 16)
margin = Rect2(3, 8, 6, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8axo"]
atlas = ExtResource("2_e8ub7")
region = Rect2(14, 80, 14, 13)
margin = Rect2(12, 5, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_7on1t"]
atlas = ExtResource("2_e8ub7")
region = Rect2(72, 102, 16, 9)
margin = Rect2(12, 10, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v10f"]
atlas = ExtResource("2_e8ub7")
region = Rect2(100, 62, 14, 15)
margin = Rect2(12, 9, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnixk"]
atlas = ExtResource("2_e8ub7")
region = Rect2(30, 102, 16, 9)
margin = Rect2(12, 8, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_871sh"]
atlas = ExtResource("2_e8ub7")
region = Rect2(102, 91, 14, 13)
margin = Rect2(12, 5, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxtii"]
atlas = ExtResource("2_e8ub7")
region = Rect2(88, 91, 14, 13)
margin = Rect2(6, 5, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6frl"]
atlas = ExtResource("2_e8ub7")
region = Rect2(30, 93, 16, 9)
margin = Rect2(4, 10, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_bppd8"]
atlas = ExtResource("2_e8ub7")
region = Rect2(114, 62, 14, 15)
margin = Rect2(6, 9, 18, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc8jb"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 103, 16, 9)
margin = Rect2(4, 8, 16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_skwwd"]
atlas = ExtResource("2_e8ub7")
region = Rect2(58, 92, 14, 13)
margin = Rect2(6, 5, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_cntiq"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 64, 30, 9)
margin = Rect2(1, 9, 2, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_d08qp"]
atlas = ExtResource("2_e8ub7")
region = Rect2(74, 17, 30, 14)
margin = Rect2(1, 5, 2, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwhcq"]
atlas = ExtResource("2_e8ub7")
region = Rect2(0, 0, 26, 19)
margin = Rect2(3, 2, 6, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_37dwu"]
atlas = ExtResource("2_e8ub7")
region = Rect2(48, 59, 26, 11)
margin = Rect2(3, 7, 6, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_7jo6i"]
animations = [{
"frames": [{
"duration": 0.15,
"texture": SubResource("AtlasTexture_6826d")
}, {
"duration": 0.08,
"texture": SubResource("AtlasTexture_l1jvv")
}, {
"duration": 0.08,
"texture": SubResource("AtlasTexture_v6ikx")
}, {
"duration": 0.08,
"texture": SubResource("AtlasTexture_se77a")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_8yqp8")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_alarr")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_t1k0n")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_xqm84")
}],
"loop": false,
"name": &"attackDown",
"speed": 1.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_qyepl")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_tlcqj")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_ascym")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_0legr")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_cvhgu")
}],
"loop": false,
"name": &"attackLeft",
"speed": 1.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_r8hqu")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_3wokt")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_pdfdq")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_1jlcl")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_0elkh")
}],
"loop": false,
"name": &"attackRight",
"speed": 1.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_ji6n7")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_kcm74")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_naltd")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_v8c5e")
}],
"loop": false,
"name": &"attackUp",
"speed": 1.0
}, {
"frames": [{
"duration": 0.06,
"texture": SubResource("AtlasTexture_50837")
}, {
"duration": 0.06,
"texture": SubResource("AtlasTexture_4brdf")
}, {
"duration": 0.06,
"texture": SubResource("AtlasTexture_yjoof")
}, {
"duration": 0.06,
"texture": SubResource("AtlasTexture_por74")
}],
"loop": false,
"name": &"death",
"speed": 1.0
}, {
"frames": [{
"duration": 0.08,
"texture": SubResource("AtlasTexture_61euk")
}, {
"duration": 0.08,
"texture": SubResource("AtlasTexture_jcrsi")
}, {
"duration": 0.08,
"texture": SubResource("AtlasTexture_nqi5v")
}, {
"duration": 0.05,
"texture": SubResource("AtlasTexture_o8gm7")
}, {
"duration": 0.08,
"texture": SubResource("AtlasTexture_v2o5g")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_3rusd")
}],
"loop": true,
"name": &"idleDown",
"speed": 1.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_k8axo")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_7on1t")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_8v10f")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_qnixk")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_871sh")
}],
"loop": true,
"name": &"idleLeft",
"speed": 1.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_dxtii")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_f6frl")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_bppd8")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_lc8jb")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_skwwd")
}],
"loop": true,
"name": &"idleRight",
"speed": 1.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_cntiq")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_d08qp")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_bwhcq")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_37dwu")
}],
"loop": true,
"name": &"idleUp",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_15kmn"]
radius = 89.0225

[sub_resource type="CircleShape2D" id="CircleShape2D_dpk5p"]
radius = 36.0

[node name="Morcego" type="CharacterBody2D" groups=["Morcego"]]
position = Vector2(0, 2)
script = ExtResource("1_760se")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_t3g1w")

[node name="batCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_7f5tj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="batCollision"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_t3g1w")

[node name="Morcego" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7jo6i")
animation = &"idleDown"
autoplay = "idleDown"

[node name="detectionArea" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CircleShape2D_15kmn")

[node name="attackArea" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="attackArea"]
shape = SubResource("CircleShape2D_dpk5p")

[node name="Sounds" type="Node2D" parent="."]
position = Vector2(0, -2)

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_hdrev")

[node name="Bite" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_p530u")
volume_db = -5.0

[connection signal="body_entered" from="batCollision" to="batCollision" method="_on_body_entered"]
[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attack_area_body_entered"]
